<resources>
    <string name="app_name">Aniweeb</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="list_subtitle">Don\'t miss any anime news</string>
    <string name="mi_lista">New Trailers</string>
    <string name="noticias">Episodes</string>
    <string name="estrenos">Anime Premieres</string>
    <string name="buscar">Search..</string>

    <string name="expira_sesion">Sesión expirada</string>
    <string name="general_error">It seems there was an error. Try again later</string>


    <!-- IDS APIS -->
    <string name="client_id">e23ae05e01e71b0478325eb5281ac713</string>

    <string name="adUnitId_pruebas">ca-app-pub-3940256099942544/6300978111</string>
    <string name="adUnitId_real">ca-app-pub-2370610163894783/1857552124</string>

    <string name="adUnitInterstecial_pruebas">ca-app-pub-3940256099942544/1033173712</string>
    <string name="adUnitInterstecial_real">ca-app-pub-2370610163894783/7553689798</string>


    <string name="ad_mob_manifest">ca-app-pub-2370610163894783~2108849470</string>


    <string name="ver_mas">See More</string>
    <string name="filtros">Filters..</string>
    <string name="directorio_anime">Anime Directory</string>
    <string name="g_nero">Genre</string>
    <string name="season">Seasons</string>
    <string name="estado">State</string>
    <string name="filtrar">Filter</string>
    <string name="no_resultados">No results found.</string>
    <string name="detalles">Details</string>
    <string name="estadisticas">Stats</string>
    <string name="fecha_inicio">Start Date</string>
    <string name="fecha_final">End Date</string>
    <string name="a_adir_a_la_lista">+ Add to the list</string>
    <string name="en_emision">Broadcasting</string>
    <string name="finalizados">Finished</string>
    <string name="proximamente">Premiere Soon</string>
    <string name="siguiente_p_gina">Next Page</string>
    <string name="anterior_p_gina">Previous Page</string>
    <string name="episodes">Episodes</string>
    <string name="random_anime">Random Anime</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_news">Last News</string>
    <string name="new_trailers">New Trailers</string>
    <string name="aniweeb">ANIWEEB</string>
    <string name="your_daily_dose_of_anime">Your daily dose of anime</string>
    <string name="see_trailer">See Trailer</string>
    <string name="producers">Producers</string>
    <string name="mail">aniweeb.contact@gmail.com</string>
    <string name="contact_us">CONTACT US!</string>

</resources>