<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/icons8_streaming_movies_96___"
            android:title="@string/estrenos" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/icons8_stream_64"
            android:title="@string/noticias" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icons8_news_120___"
            android:title="@string/mi_lista" />
        <item
            android:id="@+id/nav_random"
            android:icon="@drawable/icons8_where_what_quest_50"
            android:title="@string/random_anime" />
    </group>
</menu>